# wasmGL

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.h  LICENSE  Makefile  Mesh.cpp  Pyramid.cpp  Pyramid.h  README.md  Shader.cpp  Shader.h  Window.cpp  cmake_install.cmake  compileWasm.sh  main.cpp
src/: main.cpp  mesh.h  pyramid.h  window.cpp  window.h
src/camera/: camera.cpp  camera.h
src/complexobjects/: csgmesh.h
src/core/: color.cpp  color.h  face3.cpp  face3.h  functions.cpp  functions.h  mesh.cpp  mesh.h
src/primitives/: box.cpp  box.h  createfunctions.cpp  createfunctions.h  cube.cpp  cube.h  mesh.cpp  mesh.h  pyramid.cpp  pyramid.h  sphere.cpp  sphere.h
src/shaders/: shader.cpp  shader.h
src/threecsg/: node.cpp  node.h  polygon.cpp  polygon.h  threebsp.cpp  threebsp.h  types.h  vertex.cpp  vertex.h
src/window/: window.cpp  window.h
threeTest/: nodemon.json  package-lock.json  package.json  tsconfig.json
threeTest/src/: index.ts  threeCSG.ts
wasmbuild/: main.html  main.js  main.wasm  mypage.html  wasmGL.js  wasmGL.wasm  wasmGL.worker.js
